--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,11 @@ decorator==4.3.0
 folium==0.2.1
 imgaug==0.2.5
 kiwisolver==1.0.1
-librosa==0.6.2
+librosa==0.7.2
 matplotlib>=3.1.1
 networkx==2.1
-numpy=1.19.2
-Pillow==5.2.0
+numpy==1.19.2
+Pillow==7.1.0
 pyparsing==2.2.0
 python-dateutil>=2.8.0
 pytz==2018.5
